--- a/index.html
+++ b/index.html
@@ -1,116 +1,14 @@
 <html>
 <title>FAQ PPI FI</title>
 <head>
-	<style>
-		/*https://codepen.io/swards/pen/gxQmbj*/
-		body {
-		  font-family: helvetica;
-		  display: flex ;
-		  flex-direction: column;
-		  align-items: center;
-		}
-
-		.chat {
-		  width: 400px;
-		  border: solid 1px #EEE;
-		  display: flex;
-		  flex-direction: column;
-		  padding: 10px;
-		}
-
-		.messages {
-		  margin-top: 30px;
-		  display: flex;
-		  flex-direction: column;
-		}
-
-		.message {
-		  border-radius: 20px;
-		  padding: 8px 15px;
-		  margin-top: 5px;
-		  margin-bottom: 5px;
-		  display: inline-block;
-		}
-
-		.yours {
-		  align-items: flex-start;
-		}
-
-		.yours .message {
-		  margin-right: 25%;
-		  background-color: #eee;
-		  position: relative;
-		}
-
-		.yours .message.last:before {
-		  content: "";
-		  position: absolute;
-		  z-index: 0;
-		  bottom: 0;
-		  left: -7px;
-		  height: 20px;
-		  width: 20px;
-		  background: #eee;
-		  border-bottom-right-radius: 15px;
-		}
-		.yours .message.last:after {
-		  content: "";
-		  position: absolute;
-		  z-index: 1;
-		  bottom: 0;
-		  left: -10px;
-		  width: 10px;
-		  height: 20px;
-		  background: white;
-		  border-bottom-right-radius: 10px;
-		}
-
-		.mine {
-		  align-items: flex-end;
-		}
-
-		.mine .message {
-		  color: white;
-		  margin-left: 25%;
-		  background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
-		  background-attachment: fixed;
-		  position: relative;
-		}
-
-		.mine .message.last:before {
-		  content: "";
-		  position: absolute;
-		  z-index: 0;
-		  bottom: 0;
-		  right: -8px;
-		  height: 20px;
-		  width: 20px;
-		  background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
-		  background-attachment: fixed;
-		  border-bottom-left-radius: 15px;
-		}
-
-		.mine .message.last:after {
-		  content: "";
-		  position: absolute;
-		  z-index: 1;
-		  bottom: 0;
-		  right: -10px;
-		  width: 10px;
-		  height: 20px;
-		  background: white;
-		  border-bottom-left-radius: 10px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="awesomplete/awesomplete.js" async></script>
   	<link rel="stylesheet" href="awesomplete/awesomplete.css" />
 </head>
 <body onload="okkurr()">
 	<h1>FAQ PPI.FI (demo)</h1>
 	<img src="logo.png">
-	<input type="text" id="cariin" placeholder="ketik kata kunci di sini..." size=40 style="font-size: 20px;">
-	<br>
-	<!-- <input type="button" value="cari"> -->
+	<input type="text" id="cariin" placeholder="tanya apa?" size=40 style="font-size: 20px;"><a href="#" id='reset' onclick=reset() style="text-decoration: none; top: -4px;">x</a>
 	<hr>
 	<center>
 	<div id='daftarnyah'>
@@ -121,232 +19,5 @@
 	<hr>
 	<div id="jml"></div>
 </body>
-
-	<script>
-	var id_ = 0;
-	function toktak (obj){
-		id_++;
-		var table = document.createElement("table");
-			table.id = "percakapan"+id_;
-			table.setAttribute("class", "chat")
-			table.border = 0;
-			table.width = "100%";
-			table.style.backgroundColor = "#FCFFD8"
-		var cakaps = document.createElement("tr");
-			cakaps.id = "cakap" + id_;
-			// cakaps.id = "cakap" + obj.id;
-			table.appendChild(cakaps);
-		var cakaps_ = document.createElement("td");
-			cakaps_.width = 100;
-		var datetyme = document.createElement("div");
-			datetyme.style.fontSize = '10px';
-			datetyme.innerText = obj.dtm.slice(1, obj.dtm.length-1);
-		var asker = document.createElement("div");
-			asker.style.fontSize = '14px';
-			if (obj.sndr[1]=="+"){
-				asker.innerText = "Anonim "+(Math.floor(Math.random()*1000)).toString();
-			} else asker.innerText = obj.sndr.slice(1, obj.sndr.length-1);
-			cakaps_.appendChild(datetyme)
-			cakaps_.appendChild(asker);
-			cakaps.appendChild(cakaps_);
-		var colon = document.createElement('td');
-			colon.width = 1;
-			colon.innerText = ":";
-			cakaps.appendChild(colon);
-		var quesyhon_c = document.createElement("div")
-			quesyhon_c.setAttribute("class", "yours messages")
-		var quesyhon = document.createElement('div');
-			// quesyhon.style.fontSize = '16px';
-			quesyhon.setAttribute('class', "message");
-			quesyhon.innerText = obj.msg.slice(1);
-			quesyhon_c.appendChild(quesyhon)
-			cakaps.appendChild(document.createElement('td')).appendChild(quesyhon_c);
-
-		document.getElementById("chats").appendChild(table);
-		table.appendChild(cakaps)
-
-		obj.ans.forEach(function(a){
-			taktik(table, obj.id, a)
-		})
-
-		document.getElementById("chats").appendChild(document.createElement('br'));
-	};
-
-	function taktik(table, percId, z){
-		var cakip = document.createElement('tr');
-			// cakip.style.backgroundColor = "#fff"
-			cakip.id = "cakip"+percId+"_"+z.id;
-		var jawab = document.createElement('td');
-			jawab.setAttribute("class", "mine messages")
-		var jawaban = document.createElement('div')
-			jawaban.style.fontSize = '17px';
-			jawaban.setAttribute("class", "message last")
-			if (z.message) jawaban.innerText = z.message.slice(1);
-			if (jawaban.innerText.slice(-1)=='"') jawaban.innerText = jawaban.innerText.slice(0,jawaban.innerText.length-1)
-		var penjawab = document.createElement('div');
-			penjawab.style.fontSize = '13px';			
-			if (z.sender.slice(1,2)=='+'){
-				penjawab.innerText = "Anonim " + (Math.floor(Math.random()*1000)).toString();
-			} else {
-				penjawab.innerText = z.sender.slice(1, z.sender.length-1)
-				// console.log(z.sender)
-			}
-		var datetymi = document.createElement('div');
-			datetymi.style.fontSize = "10px";
-			datetymi.innerText = z.datetime.slice(1, z.datetime.length-1);
-		cakip.appendChild(document.createElement("td"))
-		cakip.appendChild(document.createElement("td"))
-		cakip.appendChild(jawab);
-		jawab.appendChild(jawaban)
-		jawab.appendChild(penjawab)
-		jawab.appendChild(datetymi)
-		table.appendChild(cakip);
-	}		
-
-	var db, peta;
-	var jml_pertanyaan = 0;
-	var paraPertanyaan;
-
-	function bacadata(file,keperluan){
-		switch (keperluan){
-			case "csv":
-				var xmlhttp = new XMLHttpRequest();
-				xmlhttp.onreadystatechange = function() {
-					if (this.readyState == 4 && this.status == 200) {
-						db = csvJSON(this.responseText);
-						paraPertanyaan = saring(db,peta);
-						// console.table(paraPertanyaan);
-						eksekusi(paraPertanyaan)
-						// document.getElementById('cariin').value = "";
-					 return db;
-					}
-				};
-				xmlhttp.open("GET", file, true);
-				xmlhttp.send();
-				break;
-			case "peta" :
-				var xmlhttp = new XMLHttpRequest();
-				xmlhttp.onreadystatechange = function() {
-					if (this.readyState == 4 && this.status == 200) {
-						peta = JSON.parse(this.responseText);
-						// console.log(peta)
-						okkurr("csv")
-						
-					 return peta;
-					}
-				};
-				xmlhttp.open("GET", file, true);
-				xmlhttp.send();
-			break;
-		}	
-	}
-	var pendek = [];
-	function saring(db,peta){
-		var hasilsaring = []
-		peta.pertanyaannya.forEach(function(id){
-			hasilsaring.push(db[id-5])
-		})
-		hasilsaring.forEach(function(h){
-			h.answers = [];
-			for (var c in peta.cakap){
-				if (c==h.id){
-					peta.cakap[c].forEach(function(j){
-						h.answers.push(db[j-5])
-					})
-				}
-			}
-
-			pendek.push(h.message.slice(1, h.message.length-1))
-		})
-		var aw_cari = new Awesomplete(document.getElementById("cariin"));
-		aw_cari.list = pendek;
-		document.getElementById("cariin").onkeydown = function(){
-			if (this.value==""){
-				// document.getElementById("chats").innerHTML = "";
-				// document.getElementById("daftarnyah").innerHTML = "";
-			} else {
-				// document.getElementById("chats").innerHTML = "...";
-				// document.getElementById("daftarnyah").innerHTML = "...";
-			}
-		}
-		document.getElementById("cariin").addEventListener('awesomplete-selectcomplete', function(){
-                var ini = document.getElementById("cariin").value;
-                var hs_ = [];
-				this.value.innerHTML = "";
-                hasilsaring.forEach(function(hs){
-                	if (hs.message.indexOf(ini.slice(0,5))>-1) 
-                		eksekusi(hs, hs.id);
-                })
-            }
-        )
-
-		document.getElementById("jml").innerText = "Catatan: Dari " + db.length + " chat, sudah disaring menjadi " + hasilsaring.length + " pertanyajawaban";
-	 return hasilsaring;
-	}
-
-	function okkurr(apa){
-		switch (apa){
-			case "csv":
-				bacadata('chatppifi_csv2_demo.csv', "csv")
-				break;
-			default:
-				bacadata("peta.json", "peta")
-				break;
-		};
-	}
-
-	function eksekusi(res, nyariapa){
-		if (!nyariapa){ //all
-			document.getElementById("daftarnyah").innerHTML = "";
-			for (var m=0; m<res.length; m++){
-				// console.log(res[m].id)
-				toktak({
-					id:res[m].id,
-					dtm:res[m].datetime,
-					sndr:res[m].sender,
-					msg:res[m].message,
-					ans:res[m].answers
-				})
-			}
-		} else {
-			document.getElementById("chats").innerHTML = "";
-			document.getElementById("daftarnyah").innerHTML = "";
-
-        	toktak({
-        		id:res.id,
-        		dtm:res.datetime,
-        		sndr:res.sender,
-        		msg:res.message,
-        		ans:res.answers
-        	});
-		}
-		document.getElementById("cariin").focus()
-	}
-
-	function csvJSON(csv){
-		var lines=csv.split("\n");
-		var result = [];
-		var headers = [];
-		lines[0].split(",").forEach(function(h){
-			headers.push(h.slice(1,h.length-1));
-		})
-
-		for (var i=1; i<lines.length; i++){
-			var datetime = lines[i].split(",")[1];
-				datetime += ", ";
-				datetime += lines[i].split(",")[2]
-			var sender = lines[i].split(",")[3];
-			var message = lines[i].split(",")[4];
-			var idnya = lines[i].split(",")[0];
-			result.push({
-				"id" : Number(idnya),
-				"datetime" : datetime,
-				"sender" : sender,
-				"message" : message
-			})
-		}
-		return result; //JavaScript object
-		// return JSON.stringify(result); //JSON
-	}
-	</script>
+<script type="text/javascript" src="script.js"></script>
 </html>
